# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  constants.py  diff.py  key_processor.py  parser.py  stylish.py  tree.py  utils.py
gendiff/formatters/: helpers.py  json.py  plain.py  stylish.py
gendiff/generators/: gendiff.py
gendiff/key_processors/: json.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/styles/: json.py  plain.py  stylish.py
tests/: test_gendiff.py
tests/expectations/: json.py  plain.py  stylish.py
