[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "shows the difference between two json/yaml files"
authors = ["tofifi <ilaivankov919@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
